chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: { { .Values.common.namespace } }
